--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
+        "@headlessui/react": "^1.7.15",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^3.0.0",
@@ -16,7 +16,11 @@
         "postcss": "^8.4.18",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "daisyui": "^3.1.7"
     }
 }
