--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "reliese/laravel": "^1.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
