--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "ziggy": "latest"
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
